# SimpleTicTacToe

./: CMakeLists.txt  main.cpp
include/: board.h  controller.h  player.h
src/: board.cpp  controller.cpp  player.cpp
